<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_primary"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants"
    app:layoutDescription="@xml/content_detail_movies_scene">

    <ImageButton
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:id="@+id/ib_back"
        android:layout_margin="16dp"
        android:elevation="1dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="?android:selectableItemBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/back_button" />

    <ImageButton
        android:id="@+id/ib_favorite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="16dp"
        android:elevation="1dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_outline_favorite_border_24"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop_detail"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/favorite" />

    <ImageView
        android:id="@+id/iv_backdrop_detail"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/poster_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/shadow"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@drawable/shadow_effect"
        app:layout_constraintBottom_toBottomOf="@id/iv_backdrop_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/iv_poster_detail"
        android:layout_width="120dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_items"
        android:contentDescription="@string/poster_image"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop_detail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_backdrop_detail"
        app:layout_constraintVertical_bias="0.368"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextSubtitleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/rating"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/iv_poster_detail"
        app:layout_constraintTop_toBottomOf="@+id/iv_backdrop_detail" />

    <RatingBar
        android:id="@+id/rating_bar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:isIndicator="true"
        android:progressBackgroundTint="@color/grey2"
        android:progressTint="@color/red"
        app:layout_constraintBottom_toBottomOf="@id/tv_rating_detail"
        app:layout_constraintStart_toEndOf="@+id/tv_rating_detail"
        app:layout_constraintTop_toTopOf="@id/tv_rating_detail" />

    <TextView
        android:id="@+id/tv_rating_detail"
        style="@style/TextSubtitleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textColor="@color/red"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="8" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextSubtitleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/release_date"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rating_bar"
        app:layout_constraintTop_toTopOf="@id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_release_date_detail"
        style="@style/TextSubtitleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@id/textView4"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        tools:text="2002-12-2" />

    <TextView
        android:id="@+id/tv_title_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/TextTitleList"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_poster_detail"
        tools:text="@tools:sample/lorem"/>

    <TextView
        android:id="@+id/tv_tagline_detail"
        style="@style/TextSubtitleList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_detail"
        tools:text="@tools:sample/lorem"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/overview"
        android:textSize="0sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_title_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_tagline_detail" />

    <ScrollView
        android:id="@+id/scrollview_overview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7">

        <TextView
            android:id="@+id/tv_overview_detail"
            style="@style/TextSubtitleList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            tools:text="@tools:sample/lorem/random"/>

    </ScrollView>

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/fab_add"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="16dp"-->
<!--        android:contentDescription="@string/favorite"-->
<!--        android:foregroundGravity="bottom"-->
<!--        android:elevation="1dp"-->
<!--        app:fabSize="normal"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop_detail"-->
<!--        app:layout_constraintEnd_toEndOf="parent" />-->

</androidx.constraintlayout.motion.widget.MotionLayout>