<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_movies"
        android:title="@string/tab_1"
        android:icon="@drawable/ic_baseline_movie_24"/>


    <item
        android:id="@+id/nav_tv_show"
        android:title="@string/tab_2"
        android:icon="@drawable/ic_baseline_live_tv_24" />

    <item
        android:id="@+id/nav_favorite"
        android:title="@string/favorite"
        android:icon="@drawable/ic_baseline_favorite_24" />

</menu>