<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_newest"
            android:checked="true"
            android:title="@string/newest" />
        <item
            android:id="@+id/action_oldest"
            android:checked="false"
            android:title="@string/oldest" />
        <item
            android:id="@+id/action_random"
            android:checked="false"
            android:title="@string/random" />
    </group>

</menu>